# routes

./: .env  Cargo.toml  LICENSE  README.md
.sqlx/: query-63b61efd19a16cca9949cae9771d9f20019fcc426581271d71e84ac36f7224fd.json  query-de9cfbfeca859a998b2a76a9ab96b97159e7b6b2d17163aa19dedd479c0908c5.json
src/: main.rs
