[package]
name = "routes"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
petgraph = "0.7.1"
reqwest = { version = "0.12.12", features = ["stream"] }
serde = "1.0.218"
serde_json = "1.0.140"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql"] }
termimad = "0.31.2"
tokio = { version = "1.43.0", features = ["rt", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
